# opengl-3d-engine

./: .gitignore  CMakeLists.txt  CMakeLists_merge.txt  CMakeLists_vulcan.txt  blinn_phong_material.cpp  buffer_dispatch_arg.cpp  buffer_dispatch_arg.h  buffer_object.cpp  buffer_object.h  camera.cpp  camera.h  circle_cloud.cpp  circle_cloud.h  commands.md  compute_program.h  compute_shader.cpp  compute_shader.h  cube.cpp  cube.h  cube_prefab.h  dispatch_arg.cpp  dispatch_arg.h  drawable.h  ebo.cpp  ebo.h  engine3d.cpp  engine3d.h  fps_camera_controller.cpp  fps_camera_controller.h  fragment_shader.cpp  fragment_shader.h  gicp.cpp  gicp.h  gicp_test_clouds.cpp  gicp_test_clouds.h  glsl_preprocessor.cpp  glsl_preprocessor.h  gpu_timestamp.cpp  gpu_timestamp.h  grid_3d.cpp  (+109 more)
a_star/: a_star.cpp  a_star.h  curvature_a_star.cpp  curvature_a_star.h  nonholonomic_a_star.cpp  nonholonomic_a_star.h  occupancy_cell.cpp  occupancy_cell.h  occupancy_grid_3d.cpp  occupancy_grid_3d.h  reeds_shep.h  reeds_shepp.cpp  reeds_shepp.h  voxel_occupancy_grid_3d.cpp  voxel_occupancy_grid_3d.h
build-msvc/: CMakeCache.txt  cmake_install.cmake
icp/: gicp.cpp  gicp.h  gicp_pass.cpp  gicp_pass.h  gicp_pass_old.cpp  gicp_reductor.cpp  gicp_reductor.h  voxel_map_point_inserter.cpp  voxel_map_point_inserter.h  voxel_point_map.cpp  voxel_point_map.h  voxel_point_map_reseter.cpp  voxel_point_map_reseter.h
models/: test_mesh.vtk
old_shaders/opengl/: add_point_cloud_to_map_cs_FULL.glsl  align_point_cloud_cs.glsl  align_point_cloud_cs_FULL.glsl  align_point_cloud_cs_old_2.glsl  circle_vs.glsl  clear_buffer.glsl  deafult_fragment.glsl  deafult_fragment_venus.glsl  deafult_fragment_with_light.glsl  deafult_vertex_old.glsl  equirect_to_cubemap_vs.glsl  hash_table.glsl  line_fs.glsl  line_vs.glsl  point_vs.glsl  test_hash_table.glsl  utils.glsl
old_voxel_engine/: chunk.h  voxel.cpp  voxel.h
opengl/: blinn_phong_material.h  circle_cloud.cpp  compute_program.cpp  compute_shader.h  config.h  cube.cpp  cube.h  cube_prefab.h  cubemap.cpp  cubemap.h  dispatch_arg.h  ebo.cpp  engine3d.h  fragment_shader.cpp  fragment_shader.h  framebuffer.cpp  framebuffer.h  gicp.h  glsl_preprocessor.cpp  glsl_preprocessor.h  grid_3d.h  gridable.h  leg.cpp  light_source.h  lighting_system.cpp  limb.cpp  limb.h  line.cpp  main_cloud_video.cpp  main_spider.cpp  main_spri_v_opengl.cpp  main_voxel_map_working.cpp  main_vulkan.cpp  main_with_error.cpp  main_world_generation_gpu.cpp  material.h  material_instance.h  material_manager.cpp  material_manager.h  material_template.h  (+43 more)
point_cloud/: point_cloud.cpp  point_cloud.h  point_cloud_frame.cpp  point_cloud_frame.h  point_cloud_pass.cpp  point_cloud_pass.h  point_cloud_video.cpp  point_cloud_video.h  point_instance.h
point_cloud/generation/: point_cloud_generator.cpp  point_cloud_generator.h
point_cloud_opengl/: point_cloud_video.cpp  point_cloud_video.h
scene/: scene_node.h  transform.cpp  transform.h
shaders/: add_point_cloud_to_map_cs.glsl  add_point_cloud_to_map_cs_FULL.glsl  align_point_cloud_cs.glsl  align_point_cloud_cs_FULL.glsl  blinn_phong_fs.glsl  blinn_phong_vs.glsl  blur_fs.glsl  deafult_fragment.glsl  deafult_vertex.glsl  dispatch_adapter.glsl  equirect_to_cubemap.comp  equirect_to_cubemap.frag  equirect_to_cubemap.vert  equirect_to_cubemap_fs.glsl  equirect_to_cubemap_old.comp  final_fs.glsl  generate_brdf_lut.comp  generate_irradiance_map.comp  generate_prefilter_map.comp  light_incides_for_clusters.comp  line_vs.glsl  pbr.frag  pbr.vert  pbr_old.frag  pbr_old.vert  point_fs.glsl  point_vs.glsl  skybox.frag  skybox.vert  skybox_fs.glsl  test_compute.comp  utils.glsl
shaders/avoxel_grid_packed/: apply_writes_to_world.glsl  mesh_alloc.glsl  stream_generate_terrain.glsl  stream_select_chunks.glsl  verify_mesh_allocation.glsl
shaders/common/: buffer_structures.glsl  chunk_pool.glsl  hash_table.glsl  hash_table_old.glsl
shaders/for_include_test/: file1.glsl  file2.glsl
shaders/icp/: gicp_reduce.comp  gicp_step.comp  gicp_step_old.comp  insert_points_into_voxel_map.comp  reset_voxel_point_map.comp
shaders/opengl/: align_point_cloud_cs_old.glsl  blinn_phong_fs.glsl  blinn_phong_vs.glsl  deafult_fragment_old.glsl  memory_utils.glsl  (+2 more)
skybox/: skybox_pass.cpp  skybox_pass.h
ui_elements/: triangle_controller.cpp  triangle_controller.h
voxel_engine/: chunk.cpp  chunk.h  gridable.h  voxel.cpp  voxel.h  voxel_editor.cpp  voxel_editor.h  voxel_grid.cpp  voxel_grid.h
voxelization_branch_files/: buffer_object.cpp  buffer_object.h  compute_shader.cpp  engine3d.cpp  engine3d.h  gridable_gpu.h  main_voxel_grid.cpp  shader_helper.cpp  torus.h  voxel_grid_gpu_debugger.h
vulkan/: attachment_layout.cpp  attachment_layout.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  compute_pipeline.cpp  compute_pipeline.h  compute_program.cpp  compute_program.h  cubemap.cpp  cubemap.h  cubemap_old.cpp  cubemap_old.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_bundle.cpp  descriptor_set_bundle.h  descriptor_set_layout.cpp  descriptor_set_layout.h  fence.cpp  fence.h  graphics_pipeline.cpp  graphics_pipeline.h  pbr_environment.cpp  pbr_environment.h  pbr_renderer.cpp  pbr_renderer.h  pipeline.h  render_pass.cpp  render_pass.h  render_target_2d.cpp  render_target_2d.h  renderer.h  resource_loader.cpp  resource_loader.h  shader_module.cpp  shader_module.h  (+14 more)
vulkan_self/: glfw_context.cpp  glfw_context.h  queue_family_indices.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_device.cpp  vulkan_device.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image_view.cpp  vulkan_image_view.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_queue.cpp  vulkan_queue.h  vulkan_queue_types.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_swapchain.cpp  vulkan_swapchain.h  window.cpp  window.h
(+208 files in other folders)
